Fix for browser bugs with combination of white-space nowrap/normal

--- a/Resources/Public/Backend/Css/Skin/t3skin_override.css
+++ b/Resources/Public/Backend/Css/Skin/t3skin_override.css
@@ -395,11 +395,13 @@ td.t3-page-column, td.t3-page-lang-column {
 }
 
 .t3-gridCell-horizontal > .t3-page-ce-wrapper > .t3-page-ce {
-	white-space: normal;
 	display: inline-block;
 	vertical-align: top;
 }
 
-.t3-gridCell-horizontal > .t3-page-ce-wrapper > .t3-page-ce .t3-page-ce-body-inner {
-	white-space: normal;
+.t3-gridCell-horizontal > .t3-page-ce-wrapper > .t3-page-ce .exampleContent > a {
+	text-overflow: ellipsis;
+	max-width: 250px;
+	overflow: hidden;
+	display: block;
 }
